@@ -106,8 +106,6 @@
  * A users directory will contain:
  *
  *  - uuid : File containing the users uuid.
- *  - isadmin : (optional) flag to mark the user being an admin.
- *  - isobserver : (optional) flag to mark the user being an observer.
  *  - auth/rules : The rules file.
  *  - auth/hash : (only for locally authenticated users) hash of the users
  *                password
@@ -1101,141 +1099,6 @@ openvas_user_uuid (const char *name)
 }
 #endif // not _WIN32
 
-/**
- * @brief Check if a user has administrative privileges.
- *
- * The check for administrative privileges is currently done by looking for an
- * "isadmin" file in the user directory.
- *
- * @param username Username.
- *
- * @warning No "sharp" test is performed, as it is possible to have multiple
- *          users with the same name (in order to allow integration of remote
- *          authentication sources). Would need the uuid here to fix this
- *          behaviour.
- *
- * @return 1 user has administrative privileges, 0 user does not have
- * administrative privileges
- */
-int
-openvas_is_user_admin (const gchar * username)
-{
-  gchar *dir_name = g_build_filename (OPENVAS_USERS_DIR, username, NULL);
-  gchar *file_name = g_build_filename (dir_name,
-                                       "isadmin",
-                                       NULL);
-  gboolean file_exists = FALSE;
-  if (g_file_test (dir_name, G_FILE_TEST_IS_DIR))
-    {
-      if (g_file_test (file_name, G_FILE_TEST_IS_REGULAR))
-        {
-          g_free (file_name);
-          g_free (dir_name);
-          return 1;
-        }
-      g_free (file_name);
-      g_free (dir_name);
-      return 0;
-    }
-
-  g_free (dir_name);
-  g_free (file_name);
-
-  // Remote case.
-  if (file_exists == FALSE && (initialized == TRUE && authenticators != NULL))
-    {
-      // Try each authenticator in the list.
-      GSList *item = authenticators;
-      while (item)
-        {
-          authenticator_t authent = (authenticator_t) item->data;
-          file_name = g_build_filename (OPENVAS_STATE_DIR,
-                                        "users-remote",
-                                        authentication_methods[authent->method],
-                                        username,
-                                        "isadmin",
-                                        NULL);
-
-          if (g_file_test (file_name, G_FILE_TEST_EXISTS) == TRUE)
-            {
-              g_free (file_name);
-              return 1;
-            }
-          g_free (file_name);
-          item = g_slist_next (item);
-        }
-    }
-
-  return file_exists;
-}
-
-/**
- * @brief Check if a user is an observer.
- *
- * The check for administrative privileges is currently done by looking for an
- * "ispassword" file in the user directory.
- *
- * @param username Username.
- *
- * @warning No "sharp" test is performed, as it is possible to have multiple
- *          users with the same name (in order to allow integration of remote
- *          authentication sources). Would need the uuid here to fix this
- *          behaviour.
- *
- * @return 1 if user is observer, else 0.
- */
-int
-openvas_is_user_observer (const gchar * username)
-{
-  gchar *dir_name = g_build_filename (OPENVAS_USERS_DIR, username, NULL);
-  gchar *file_name = g_build_filename (dir_name,
-                                       "isobserver",
-                                       NULL);
-  gboolean file_exists = FALSE;
-  if (g_file_test (dir_name, G_FILE_TEST_IS_DIR))
-    {
-      if (g_file_test (file_name, G_FILE_TEST_IS_REGULAR))
-        {
-          g_free (file_name);
-          g_free (dir_name);
-          return 1;
-        }
-      g_free (file_name);
-      g_free (dir_name);
-      return 0;
-    }
-
-  g_free (dir_name);
-  g_free (file_name);
-
-  // Remote case.
-  if (file_exists == FALSE && (initialized == TRUE && authenticators != NULL))
-    {
-      // Try each authenticator in the list.
-      GSList *item = authenticators;
-      while (item)
-        {
-          authenticator_t authent = (authenticator_t) item->data;
-          file_name = g_build_filename (OPENVAS_STATE_DIR,
-                                        "users-remote",
-                                        authentication_methods[authent->method],
-                                        username,
-                                        "isobserver",
-                                        NULL);
-
-          if (g_file_test (file_name, G_FILE_TEST_EXISTS) == TRUE)
-            {
-              g_free (file_name);
-              return 1;
-            }
-          g_free (file_name);
-          item = g_slist_next (item);
-        }
-    }
-
-  return file_exists;
-}
-
 
 /**
  * @brief Place files in users /auth/methods/ directory indicating the
@@ -1290,86 +1153,6 @@ openvas_auth_user_set_allowed_methods (const gchar * username,
     }
 
   return 1;
-}
-
-/**
- * @brief Set the role of a user.
- *
- * @param username      Username.
- * @param role          Role.
- * @param user_dir_name Directory of user. Can be NULL than the default (for
- *                      locally authenticated users) will be taken.
- *
- * @return 0 success, -1 failure, -2 unknown role.
- */
-int
-openvas_set_user_role (const gchar * username, const gchar * role,
-                       const gchar * user_dir_name)
-{
-  gchar *admin_file_name, *observer_file_name;
-
-  // Take default directory if none passed as parameter.
-
-  if (user_dir_name == NULL)
-    admin_file_name = g_build_filename (OPENVAS_USERS_DIR, username, "isadmin",
-                                        NULL);
-  else
-    admin_file_name = g_build_filename (user_dir_name, "isadmin", NULL);
-
-  if (user_dir_name == NULL)
-    observer_file_name = g_build_filename (OPENVAS_USERS_DIR, username,
-                                           "isobserver", NULL);
-  else
-    observer_file_name = g_build_filename (user_dir_name, "isobserver", NULL);
-
-  if (strcmp (role, "User") == 0)
-    {
-      if (g_remove (admin_file_name) && errno != ENOENT)
-        goto fail;
-
-      if (g_remove (observer_file_name) && errno != ENOENT)
-        goto fail;
-    }
-  else if (strcmp (role, "Admin") == 0)
-    {
-      if (g_remove (admin_file_name) && errno != ENOENT)
-        goto fail;
-
-      if (g_remove (observer_file_name) && errno != ENOENT)
-        goto fail;
-
-      if (g_file_set_contents (admin_file_name, "", -1, NULL)
-          == FALSE)
-        goto fail;
-
-      g_chmod (admin_file_name, 0600);
-    }
-  else if (strcmp (role, "Observer") == 0)
-    {
-      if (g_remove (admin_file_name) && errno != ENOENT)
-        goto fail;
-
-      if (g_remove (observer_file_name) && errno != ENOENT)
-        goto fail;
-
-      if (g_file_set_contents (observer_file_name, "", -1, NULL)
-          == FALSE)
-        goto fail;
-
-      g_chmod (observer_file_name, 0600);
-    }
-  else
-    {
-      g_free (admin_file_name);
-      return -2;
-    }
-
-  g_free (admin_file_name);
-  return 0;
-
- fail:
-  g_free (admin_file_name);
-  return -1;
 }
 
 #ifndef _WIN32
