@@ -80,13 +80,6 @@ int openvas_user_exists (const char *);
 
 gchar *openvas_user_uuid (const char *name);
 
-int openvas_is_user_admin (const gchar *);
-
-int openvas_is_user_observer (const gchar *);
-
-int openvas_set_user_role (const gchar *, const gchar *,
-                           const gchar * user_dir_name);
-
 GString *openvas_auth_make_user_rules (const gchar *, int);
 GSList *
 openvas_auth_user_methods (const gchar * user_name);
